--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Jede Beziehung durchläuft Höhen und Tiefen. Manchmal benötigen Paare Unterstützung, um Missverständnisse zu klären, die Kommunikation zu verbessern und die Verbindung wiederherzustellen. In der Paartherapie bieten wir einen geschützten Raum, um gemeinsam an Ihren Herausforderungen zu arbeiten.
             </p>
             <p class="text-lg leading-relaxed text-gray-600">
-                Unsere systemische Herangehensweise betrachtet die Dynamik Ihrer Beziehung und hilft, Muster zu erkennen und zu verändern, damit Sie wieder als Team agieren können.
+                Unsere systemische Herangehensweise betrachtet die Dynamik Ihrer Beziehung und hilft, Muster zu erkennen und zu verändern, damit Sie wieder als Team agieren können. Ein einzigartiger Vorteil unseres Angebots ist die Begleitung durch einen weiblichen und einen männlichen Therapeuten, was eine umfassende und ausgewogene Perspektive auf Ihre Beziehung ermöglicht.
             </p>
         </div>
     </section>
@@ -116,7 +116,7 @@
         <div class="container mx-auto px-4 max-w-4xl">
             <h2 class="text-3xl sm:text-4xl font-bold text-center mb-6 text-green-800">Ihre Therapeuten</h2>
             <p class="text-center text-lg text-gray-600 mb-12">
-                Dieses Angebot wird von einem qualifizierten Therapeuten-Paar geleitet.
+                Dieses Angebot wird von Larissa Stupp und Tobias Brand geleitet, einem erfahrenen Therapeuten-Paar. Ihre Zusammenarbeit als männlicher und weiblicher Therapeut ermöglicht es, die verschiedenen Dynamiken und Kommunikationsstile innerhalb einer Partnerschaft aus beiden Perspektiven zu beleuchten.
             </p>
             <div class="flex flex-col md:flex-row items-center justify-center gap-12">
                 <!-- Leader 1 -->
@@ -125,7 +125,7 @@
                     <h3 class="text-xl font-semibold text-emerald-600 mb-1">Larissa Stupp</h3>
                     <p class="text-gray-500 mb-4">Kindheitspädagogin & Systemische Therapeutin</p>
                     <p class="text-gray-600 text-sm">
-                        Larissa hat langjährige Erfahrung in der Einzel- und Gruppenberatung und ist spezialisiert auf Beziehungsdynamiken und Familientherapie.
+                        Als Kindheitspädagogin und systemische Therapeutin bringt Larissa eine feine Sensibilität für emotionale Beziehungsdynamiken und familiäre Muster mit. Ihre weibliche Perspektive ist besonders wertvoll, um empathisch auf die emotionalen Bedürfnisse einzugehen und einen Raum für tiefere Gefühle zu schaffen.
                     </p>
                 </div>
                 <!-- Leader 2 -->
@@ -134,7 +134,7 @@
                     <h3 class="text-xl font-semibold text-emerald-600 mb-1">Tobias Brand</h3>
                     <p class="text-gray-500 mb-4">Sport- und Sozialwissenschaftler & Lehrer</p>
                     <p class="text-gray-600 text-sm">
-                        Tobias bringt seine Expertise in der Beratung von sozialen Systemen ein und bietet praktische Ansätze für eine harmonische Zusammenarbeit.
+                        Mit seiner Expertise als Sport- und Sozialwissenschaftler und Systemischer Therapeut liegt Tobias' Stärke in der Analyse von Kommunikationsstrukturen. Seine männliche Perspektive hilft, Konfliktlösungen pragmatisch zu gestalten und neue, handlungsorientierte Wege für eine bessere Zusammenarbeit zu entwickeln.
                     </p>
                 </div>
             </div>
